--- a/cluster-db-1/docker-compose.yaml
+++ b/cluster-db-1/docker-compose.yaml
@@ -1,4 +1,8 @@
 version: '3'
 services:
   db:
-    image: postgres:9.5-alpine
+    image: postgres:11.8-alpine
+    environment:
+      - POSTGRES_USER=cluster
+      - POSTGRES_PASSWORD=${PG_PASS}
+      - POSTGRES_DB=cluster
